[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/fonts/MainFont.tres" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/host/HostScene.gd" type="Script" id=2]
[ext_resource path="res://scenes/enviroment/Enviroment.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/characters/MainCharacter.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/characters/SecondCharacter.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/WaitingText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "waiting for player." ]
}

[sub_resource type="Animation" id=3]
resource_name = "WaitingAnimation"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/WaitingText:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "waiting for player", "waiting for player.", "waiting for player..", "waiting for player...", "waiting for player..." ]
}

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="HostScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Enviroment" parent="." instance=ExtResource( 3 )]

[node name="WaitingAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/WaitingAnimation = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WaitingText" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -105.0
margin_top = 25.0
margin_right = 117.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "waiting for player."

[node name="SecondCharacter" parent="." instance=ExtResource( 5 )]
position = Vector2( 542, -235 )

[node name="Character" parent="." instance=ExtResource( 4 )]
position = Vector2( 529, 301 )
